--- a/.github/workflows/deploy_fe_with_s3.yml
+++ b/.github/workflows/deploy_fe_with_s3.yml
@@ -42,5 +42,5 @@ jobs:
       - name: deploy to s3
         run: aws s3 cp ./dist s3://www.jungha.store/ --recursive
 
-      - name: invalidate cloudfront caches
-        run: aws cloudfront create-invalidation --distribution-id E149ET3ZFJXG7T --paths "/*"
+      # - name: invalidate cloudfront caches
+      #   run: aws cloudfront create-invalidation --distribution-id E149ET3ZFJXG7T --paths "/*"
