--- a/.github/workflows/deploy_fe_with_s3.yml
+++ b/.github/workflows/deploy_fe_with_s3.yml
@@ -43,4 +43,4 @@ jobs:
         run: aws s3 cp ./dist s3://www.jungha.store/ --recursive
 
       - name: invalidate cloudfront caches
-        run: aws cloudfront create-invalidation --distribution-id E17RVHNA9VY029 --paths "/*"
+        run: aws cloudfront create-invalidation --distribution-id E1JGNUAW2WNELD --paths "/*"
